Released a Linux demonstration on AWS LightSail. HSQLDB at 52.37.56.187 on port 9001 and HTTP server on port 8182 Updated Milo to version 0.4.2 Updated ActiveMQ client to version 5.15.13 Upgraded MQTT Paho client to version 1.2.5 Upgraded Jetty server to version 9.4.31 Upgraded Vaadin to version 8.11.2 Code enhancements per SonarLint recommendations Miscellaneous stability improvements